tests/init-global/neg/global-cycle1.check
-- Error: tests/init-global/neg/global-cycle1.scala:1:7 ----------------------------------------------------------------
1 |object A {             // error
  |       ^
  |       Cyclic initialization: object A -> object B -> object A. Calling trace:
  |       ├── object A {             // error	[ global-cycle1.scala:1 ]
  |       │   ^
  |       ├── val a: Int = B.b	[ global-cycle1.scala:2 ]
  |       │                ^
  |       ├── object B {	[ global-cycle1.scala:5 ]
  |       │   ^
  |       └── val b: Int = A.a     // error	[ global-cycle1.scala:6 ]
  |                        ^
-- Error: tests/init-global/neg/global-cycle1.scala:6:17 ---------------------------------------------------------------
6 |  val b: Int = A.a     // error
  |               ^^^
  |               Access uninitialized field value a. Calling trace:
  |               ├── object B {	[ global-cycle1.scala:5 ]
  |               │   ^
  |               └── val b: Int = A.a     // error	[ global-cycle1.scala:6 ]
  |                                ^^^
